--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: arsrooms@gaming.com</p>
+    <p>Email: arsrooms@gmail.com</p>
     <p>Phone: +123-456-7890</p>
   </section>
 
