--- a/index.html
+++ b/index.html
@@ -1,156 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ARS ROOMS - Gaming Zone</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ShopWala</title>
 </head>
 <body>
+    <main>
+    <p>shopWala</p>
+    <h1>ShopWala</h1>
+    <h2>ShopWala</h2>
+    <h3>ShopWala</h3>
+    <h4>ShopWala</h4>
+    <h5>ShopWala</h5>
+    <h6>ShopWala</h6>
+    <br>
+    <hr>
 
-  <!-- Navigation Bar -->
-  <nav>
-    <ul>
-      <li><a href="#home">🏠 Home</a></li>
-      <li><a href="#about">ℹ️ About</a></li>
-      <li><a href="#games">🎮 Games</a></li>
-      <li><a href="#downloads">⬇️ Downloads</a></li>
-      <li><a href="#contact">📞 Contact</a></li>
-      <li><a href="#support">💬 Support</a></li>
-    </ul>
-  </nav>
+    <a href="https://www.youtube.com/">YouTube</a>
 
-  <!-- Home Section -->
-  <header id="home">
-    <h1>🎮 Welcome to ARS ROOMS 🎮</h1>
-    <p>COME AND DOWNLOAD GAME AND GET FREE LINK</p>
-  </header>
+<b>Flat 70</b>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Us</h2>
-    <p>ARS ROOMS is a free gaming hub offering the most popular games with trusted download links from Epic Games, Steam, and Rockstar And the Founder Of This Website is ARS</p>
-  </section>
+<subscript>%</subscript>
+<table>
+        <tr>
+           
+            <th>Name</th>
+            <th>Roll Number</th>
+        </tr>
 
-  <!-- Games Section -->
-  <section id="games">
-    <h2>Our Top Games</h2>
-    <p>Explore titles like GTA V, RDR2, Fortnite, Rocket League and more.</p>
-  </section>
+        <tr>
+            <th>Attaerasool</th>
+            <th>39</th>
+        </tr>
 
-  <!-- Downloads Section -->
-  <section id="downloads">
-  <h2>Download Games</h2>
+</table>
 
-  <!-- GTA V -->
-  <div class="game-card">
-    <img src="https://upload.wikimedia.org/wikipedia/en/a/a5/Grand_Theft_Auto_V.png" alt="GTA V" />
-    <h3>GTA V</h3>
-    <a href="https://store.steampowered.com/app/271590/Grand_Theft_Auto_V/" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
+<article>
 
-  <!-- Fortnite -->
-  <div class="game-card">
-    <img src="https://cdn2.unrealengine.com/fortnite-og-social-1920x1080-05a9a0506b1b.jpg" alt="Fortnite" />
-    <h3>Fortnite</h3>
-    <a href="https://store.epicgames.com/en-US/p/fortnite" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
+    <h3>
+    <subscript>Rs</subscript> 1700
+    </h3>
 
-  <!-- Red Dead Redemption 2 -->
-  <div class="game-card">
-    <img src="https://upload.wikimedia.org/wikipedia/en/4/44/Red_Dead_Redemption_II.jpg" alt="RDR2" />
-    <h3>Red Dead Redemption 2</h3>
-    <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
+</article>
 
-  <!-- Minecraft -->
-  <div class="game-card">
-    <img src="https://upload.wikimedia.org/wikipedia/en/5/51/Minecraft_cover.png" alt="Minecraft" />
-    <h3>Minecraft</h3>
-    <a href="https://www.minecraft.net/en-us/download" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
+</main>
+<footer>
 
-  <!-- Rocket League -->
-  <div class="game-card">
-    <img src="https://cdn2.unrealengine.com/egs-rocketleague-psyonix-ic1-400x400-2b32ef69354f.jpg" alt="Rocket League" />
-    <h3>Rocket League</h3>
-    <a href="https://store.epicgames.com/en-US/p/rocket-league" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
-
-  <!-- PUBG -->
-  <div class="game-card">
-    <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/PlayerUnknown%27s_Battlegrounds_cover.jpg" alt="PUBG" />
-    <h3>PUBG</h3>
-    <a href="https://store.steampowered.com/app/578080/PUBG_BATTLEGROUNDS/" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
-
-  <!-- Among Us -->
-  <div class="game-card">
-    <img src="https://cdn2.unrealengine.com/egs-amongus-innersloth-ic1-400x400-81fe861f73f9.jpg" alt="Among Us" />
-    <h3>Among Us</h3>
-    <a href="https://store.epicgames.com/en-US/p/among-us" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
-
-  <!-- Fall Guys -->
-  <div class="game-card">
-    <img src="https://cdn2.unrealengine.com/fallguys-logo-400x400-1e63fc80bbd5.jpg" alt="Fall Guys" />
-    <h3>Fall Guys</h3>
-    <a href="https://store.epicgames.com/en-US/p/fall-guys" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
-
-  <!-- The Sims 4 -->
-  <div class="game-card">
-    <img src="https://cdn2.unrealengine.com/egs-thesims4-ea-ic1-400x400-f9ad17684b3d.jpg" alt="The Sims 4" />
-    <h3>The Sims 4</h3>
-    <a href="https://store.epicgames.com/en-US/p/the-sims-4" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
-
-  <!-- Call of Duty Warzone -->
-  <div class="game-card">
-    <img src="https://upload.wikimedia.org/wikipedia/en/e/e3/Call_of_Duty_Warzone_cover_art.jpg" alt="COD Warzone" />
-    <h3>Call of Duty: Warzone</h3>
-    <a href="https://www.callofduty.com/warzone" target="_blank">
-      <button>Download</button>
-    </a>
-  </div>
-</section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: arsrooms@gmail.com</p>
-    <p>Phone: +123-456-7890</p>
-  </section>
-
-  <!-- Support Section -->
-  <section id="support">
-    <h2>Support</h2>
-    <p>For help, suggestions, or bug reports, please contact our support team anytime.</p>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 ARS ROOMS. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
+</footer>
 </body>
 </html>
